awards fix on mobile

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 .award
 {
 	font-size: 20px;
-	width: 40%;
+	width: 49%;
 	display: inline-block;
 }
 
